--- a/app/src/main/res/layout/activity_viewfinder.xml
+++ b/app/src/main/res/layout/activity_viewfinder.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,92 +11,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:title="Validate"
         app:titleTextColor="@android:color/white" />
 
     <include
+        android:id="@+id/scan_info"
+        layout="@layout/scan_top_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scan_info"
         android:layout_below="@id/scan_toolbar"
-        layout="@layout/scan_top_layout"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scan_toolbar" />
+
     <FrameLayout
-        android:layout_below="@id/scan_info"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scan_info">
 
-        <SurfaceView
-            android:id="@+id/cameraView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <com.budiyev.android.codescanner.CodeScannerView
+            android:id="@+id/scanner_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            app:autoFocusButtonColor="@android:color/white"
+            app:autoFocusButtonVisible="true"
+            app:flashButtonColor="@android:color/white"
+            app:flashButtonVisible="true"
+            app:frameAspectRatioHeight="1"
+            app:frameAspectRatioWidth="1"
+            app:frameColor="@android:color/white"
+            app:frameCornersSize="50dp"
+            app:frameSize="0.75"
+            app:frameThickness="2dp"
+            app:maskColor="#77000000"
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="155dp"
-                android:background="@color/semitransparent" />
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:minWidth="200dp"
-                android:minHeight="200dp"
-                >
-
-                <View
-                    android:id="@+id/left"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:background="@color/semitransparent" />
-
-                <LinearLayout
-                    android:id="@+id/scannerLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
-                    android:layout_toEndOf="@+id/left"
-                    android:layout_toLeftOf="@id/right"
-                    android:layout_toRightOf="@id/left"
-                    android:layout_toStartOf="@+id/right"
-                    android:background="@drawable/ic_viewfinder"
-                    android:orientation="horizontal">
-
-                    <View
-                        android:id="@+id/scannerBar"
-                        android:layout_width="match_parent"
-                        android:layout_height="5dp"
-                        android:background="@color/colorPrimary" />
-
-
-                </LinearLayout>
-
-
-                <View
-                    android:id="@+id/right"
-                    android:layout_width="40dp"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:background="@color/semitransparent" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="155dp"
-                android:background="@color/semitransparent" />
-
-        </LinearLayout>
-
+            />
     </FrameLayout>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
