--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorgreyish"
+    android:orientation="vertical"
     tools:context=".ui.MainActivity">
+
+    <include
+        android:id="@+id/main_no_class"
+        layout="@layout/noclass_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -28,8 +33,8 @@
     <!-- Other components and views -->
 
     <android.support.design.bottomappbar.BottomAppBar
-        style="@style/Widget.MaterialComponents.BottomAppBar"
         android:id="@+id/main_bar"
+        style="@style/Widget.MaterialComponents.BottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -37,18 +42,17 @@
         app:fabAlignmentMode="center"
         app:fabAttached="true"
         app:fabCradleDiameter="0dp"
-        app:navigationIcon="@drawable/ic_menu"
         app:layout_scrollFlags="scroll|enterAlways"
-        />
+        app:navigationIcon="@drawable/ic_menu" />
 
     <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
         android:id="@+id/main_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        app:fabIcon="@drawable/ic_add"
         app:fabSize="normal"
         app:fabText="Add new attendance"
-        app:fabIcon="@drawable/ic_add"
         app:layout_anchor="@+id/main_bar"
         app:layout_anchorGravity="center"
 
