designed main activity toolbar like text

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Showing: Thur,Sep 27, '18"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:textAppearance="@style/ToolbarSubtitleAppearance"
+                android:background="@color/colorPrimary"
+                />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
