added few methods on constants

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="bluish">#1212fa</color>
 
     <color name="contentDividerLine">#e0e0e0</color>
+    <color name="greyish">#646464</color>
+    <color name="darkbluish">#4b4bfd</color>
 </resources>
