--- a/app/src/main/res/layout/login_xml.xml
+++ b/app/src/main/res/layout/login_xml.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.LoginActivity"
+    >
 
     <ScrollView
         android:layout_width="0dp"
@@ -139,13 +141,17 @@
                 android:id="@+id/login_via_google"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginStart="60dp"
-                android:elevation="4dp"
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/rectgoogle"
+                android:clickable="true"
+                android:elevation="4dp"
+                android:focusable="true"
                 android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView5">
@@ -153,8 +159,8 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="24dp"
                     android:contentDescription="@string/content_decription"
+                    android:padding="24dp"
                     android:src="@drawable/google" />
             </LinearLayout>
 
