--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:id="@+id/main_no_class"
         layout="@layout/noclass_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
