main logic for login

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/main_toolbartitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Showing: Thur,Sep 27, '18"
