--- a/app/src/main/res/layout/login_xml.xml
+++ b/app/src/main/res/layout/login_xml.xml
@@ -157,6 +157,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5">
 
                 <ImageView
+                    android:id="@+id/login_via_google_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/content_decription"
