--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -141,6 +141,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5">
 
                 <ImageView
+                    android:id="@+id/signup_via_google_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/content_decription"
