--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,16 @@
         layout="@layout/noclass_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"
+        android:visibility="gone"
         />
-
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/mtrl_bottomappbar_height"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginBottom="@dimen/mtrl_bottomappbar_height"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            >
 
             <TextView
                 android:id="@+id/main_toolbartitle"
@@ -39,6 +35,7 @@
                 android:paddingBottom="8dp"
                 android:textAppearance="@style/ToolbarSubtitleAppearance"
                 android:background="@color/colorPrimary"
+                android:layout_marginBottom="4dp"
                 />
 
             <android.support.v7.widget.RecyclerView
@@ -50,7 +47,6 @@
                 android:visibility="visible"
                 />
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
 
     <!-- Other components and views -->
 
