--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#512DA7</color>
     <color name="colorAccent">#FF5521</color>
 
-    <color name="semitransparent">#9A000000</color>
+    <color name="semitransparent">#64696969</color>
+    <color name="semitransparent_darker">#a0696969</color>
 
     <color name="colorwhitish">#FFFFFF</color>
     <color name="colorgreyish">#d7d7d7</color>
