designed the gif

--- a/app/src/main/res/layout/activity_viewfinder.xml
+++ b/app/src/main/res/layout/activity_viewfinder.xml
@@ -60,5 +60,19 @@
         app:frameThickness="2dp"
         app:maskColor="#77000000"/>
 
+    <include
+        android:id="@+id/scan_gif"
+        layout="@layout/gif_layout"
+
+        android:visibility="visible"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scan_info"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
