--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         layout="@layout/noclass_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
+        android:visibility="visible"
         />
 
         <LinearLayout
@@ -38,14 +38,15 @@
                 android:layout_marginBottom="4dp"
                 />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/main_list"
+            <include
+                android:id="@+id/main_user_list_info"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                tools:listitem="@layout/single_lesson"
-                android:visibility="visible"
+                layout="@layout/userinfo_layout"
                 />
+
         </LinearLayout>
 
     <!-- Other components and views -->
