--- a/app/src/main/res/layout/activity_viewfinder.xml
+++ b/app/src/main/res/layout/activity_viewfinder.xml
@@ -63,8 +63,7 @@
     <include
         android:id="@+id/scan_gif"
         layout="@layout/gif_layout"
-
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
