--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -268,7 +268,7 @@
                     android:layout_marginStart="52dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/nunito_bold"
-                    android:text="@string/logout"
+                    android:text="@string/sign_out"
                     android:textAlignment="textStart"
                     android:textAllCaps="false"
                     android:textColor="@color/darkgreyish"
