--- a/app/src/main/res/layout/activity_current_setup.xml
+++ b/app/src/main/res/layout/activity_current_setup.xml
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Study year i.e 2018"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
