--- a/app/src/main/res/layout/single_lesson.xml
+++ b/app/src/main/res/layout/single_lesson.xml
@@ -59,16 +59,14 @@
 
         <TextView
             android:id="@+id/ls_venue"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/nunito_light"
             android:text="School of Business Room 8"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/attn_gthumb"
             app:layout_constraintTop_toBottomOf="@+id/ls_unit_cd"
             tools:text="School of Business Room 8" />
@@ -86,6 +84,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="8:00AM" />
+
+        <TextView
+            android:id="@+id/ls_lecname"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/nunito_light"
+            tools:text="lec: Dr wilfred Maina"
+            android:textAlignment="viewEnd"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/ls_venue"
+            app:layout_constraintTop_toBottomOf="@+id/ls_unit_cd" />
 
 
     </android.support.constraint.ConstraintLayout>
