--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,10 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+
+    <!--Style for Splash Screen-->
+    <style name="SplashScreenTheme" parent="AppTheme">
+        <item name ="android:windowBackground"> @drawable/splash_screen_background</item>
+    </style>
+
 </resources>
