--- a/app/src/main/res/layout/activity_current_setup.xml
+++ b/app/src/main/res/layout/activity_current_setup.xml
@@ -46,7 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/semester_i_e_1"
-                    android:inputType="text"
+                    android:inputType="number"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -62,7 +62,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Study year i.e 2018"
+                    android:hint="Study year e.g 2018"
                     android:inputType="number"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
@@ -80,7 +80,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/academy_year"
-                    android:inputType="textVisiblePassword"
+                    android:inputType="textPostalAddress"
                     android:layout_marginBottom="42dp"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
