--- a/app/src/main/res/layout/gif_layout.xml
+++ b/app/src/main/res/layout/gif_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/card_1"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginBottom="70dp"
         android:layout_marginEnd="35dp"
         android:layout_marginStart="35dp"
@@ -32,7 +32,7 @@
             android:layout_height="match_parent">
 
 
-            <pl.droidsonroids.gif.GifImageView
+         <!--   <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/gifImageView"
                 android:layout_width="0dp"
                 android:layout_height="400dp"
@@ -40,13 +40,28 @@
                 android:minHeight="400dp"
                 android:minWidth="250dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/gif_darasa"
+                android:src="@raw/gif_darasa"
                 app:layout_constraintBottom_toTopOf="@+id/gif_gotit_btn"
                 app:layout_constraintDimensionRatio="w,16:9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />-->
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animation_view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:minHeight="400dp"
+                android:minWidth="250dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toTopOf="@+id/gif_gotit_btn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/scan_qr_code_success" />
 
             <android.support.design.button.MaterialButton
                 android:id="@+id/gif_gotit_btn"
@@ -61,7 +76,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/light_bluish"
                 android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="@id/gifImageView"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
