--- a/app/src/main/res/layout/activity_current_setup.xml
+++ b/app/src/main/res/layout/activity_current_setup.xml
@@ -62,7 +62,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Study year e.g 2018"
+                    android:hint="Academic year e.g 2018"
                     android:inputType="number"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
@@ -79,10 +79,12 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/academy_year"
-                    android:inputType="textPostalAddress"
+                    android:hint="@string/study_year"
+                    android:inputType="number"
                     android:layout_marginBottom="42dp"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:maxLength="1"
+                    />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
