cleaning acc setup

--- a/app/src/main/res/layout/activity_account_setup.xml
+++ b/app/src/main/res/layout/activity_account_setup.xml
@@ -139,7 +139,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/school"
-                    android:inputType="textAutoComplete"
+                    android:inputType="textCapCharacters"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
