--- a/app/src/main/res/layout/activity_current_setup.xml
+++ b/app/src/main/res/layout/activity_current_setup.xml
@@ -47,7 +47,9 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/semester_i_e_1"
                     android:inputType="number"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:maxLength="1"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
