--- a/app/src/main/res/layout/activity_current_setup.xml
+++ b/app/src/main/res/layout/activity_current_setup.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.CurrentSetupActivity"
+    tools:context=".ui.auth.CurrentSetupActivity"
     >
 
     <android.support.v7.widget.Toolbar
