--- a/app/src/main/res/layout/activity_advert_class.xml
+++ b/app/src/main/res/layout/activity_advert_class.xml
@@ -64,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="12dp"
                 android:fontFamily="@font/nunito_semibold"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
@@ -107,19 +108,18 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/nunito"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/user_info_image"
-                app:layout_constraintTop_toBottomOf="@+id/user_info_time"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/user_info_image"
                 tools:text="Mavuno Self Help Group" />
 
             <TextView
                 android:id="@+id/ad_status_txt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/start_scanning_for_lec_txt"
                 android:textAlignment="center"
                 android:textSize="18sp"
@@ -144,6 +144,18 @@
 
     <include
         layout="@layout/ad_scan_network"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ad_card_top"
+        tools:visibility="gone"
+        android:visibility="gone"
+        />
+
+    <include
+        layout="@layout/ad_scan_successpop"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
