--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        app:fabIcon="@drawable/ic_add"
+        tools:fabIcon="@drawable/ic_add"
         app:fabSize="normal"
         app:fabText="Add new attendance"
         app:layout_anchor="@+id/main_bar"
