--- a/app/src/main/res/layout-v19/activity_advert_class.xml
+++ b/app/src/main/res/layout-v19/activity_advert_class.xml
@@ -11,25 +11,6 @@
     tools:context=".ui.AdvertClassActivity"
     >
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/ad_fab"
-        style="@style/Widget.MaterialComponents.FloatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="32dp"
-        app:backgroundTint="@color/white"
-        app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="@id/ad_card_top"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ad_card_top"
-        app:maxImageSize="56dp"
-        app:rippleColor="@color/colorPrimaryDark"
-        tools:srcCompat="@drawable/ic_add_small"
-        app:tint="@color/colorAccent"
-        app:layout_anchor="@id/ad_card_top"
-        />
-
     <android.support.v7.widget.CardView
         style="@style/Widget.MaterialComponents.CardView"
         android:id="@+id/ad_card_top"
@@ -47,13 +28,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/ad_fab"
+                style="@style/Widget.MaterialComponents.FloatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:backgroundTint="@color/white"
+                app:borderWidth="0dp"
+                app:fabSize="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
+                app:maxImageSize="56dp"
+                app:rippleColor="@color/colorPrimaryDark"
+                app:tint="@color/colorAccent"
+                tools:srcCompat="@drawable/ic_add_small" />
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_info_image"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:src="@drawable/avatar_placeholder"
                 app:civ_border_color="@android:color/white"
                 app:civ_border_width="4dp"
@@ -118,15 +118,15 @@
                 android:id="@+id/ad_status_txt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/start_scanning_for_lec_txt"
                 android:textAlignment="center"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/ad_fab"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/user_course_chip" />
 
