solved bug #61 clipToPadding recyclerview

--- a/app/src/main/res/layout/userinfo_layout.xml
+++ b/app/src/main/res/layout/userinfo_layout.xml
@@ -93,6 +93,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/single_lesson" />
+        tools:listitem="@layout/single_lesson"
+        android:clipToPadding="false"
+        android:paddingBottom="16dp"
+        />
 
 </android.support.constraint.ConstraintLayout>
