--- a/app/src/main/res/layout/activity_current_setup.xml
+++ b/app/src/main/res/layout/activity_current_setup.xml
@@ -64,7 +64,7 @@
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Academic year e.g 2018"
+                    android:hint="@string/academic_year_txt"
                     android:inputType="number"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
